--- a/graph_maker.ipynb
+++ b/graph_maker.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "65259e4b-616c-4086-868f-2859ca318e52",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "6d06e937-8b4d-44b1-8618-863a99ee99b6",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
     "        u = torch.tensor([cluster[thing] for thing in cluster.fields], dtype=torch.float).t()\n",
     "    \n",
     "        # Create your graph data object, now including graph-level features\n",
-    "        graph_data = Data(x=node_features, edge_index=edge_index, u=u, y = float(label))\n",
+    "        graph_data = Data(x=node_features, edge_index=edge_index, u=u, y = torch.tensor(int(label)))\n",
     "        \n",
     "        # Add the graph data object to your list\n",
     "        graph_data_list.append(graph_data)\n",
@@ -199,9 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "a6caea17-bfac-4a00-986f-2fcb59c6bbd3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "with concurrent.futures.ProcessPoolExecutor() as executor:\n",
@@ -212,6 +214,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fdf209e4-64bd-405f-a7ff-75edd55a4a1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcda0c80-9cab-4eeb-acf2-c11d80f7d6aa",
    "metadata": {},
    "outputs": [],
    "source": []
